# perax-solana-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
docs/: AI_PROVIDER_POLICY.md  AI_TOOLS_SMOKE_TEST_COMMANDS.md  CHECKOUT_SETTLEMENT.md  COPYLEAKS_SMOKE_TEST_COMMANDS.md  PAYSCRIBE_ELECTRICITY_VALIDATION_SMOKE_TESTS.md  PAYSCRIBE_PRODUCTION_READINESS.md  PAYSCRIBE_SMOKE_TEST_COMMANDS.md  PAYSTACK_BACKEND_IMPLEMENTATION_PLAN.md  PAYSTACK_PRODUCTION_READINESS.md  PAYSTACK_SMOKE_TEST_COMMANDS.md  PEX_BURN_ENGINE_POLICY.md  PYTH_AND_V0_SMOKE_TEST_COMMANDS.md  TELNYX_PRODUCTION_READINESS.md  solana-event-parser-plan.md
migrations/: 20260521000000_init_perax.sql  20260521000001_add_provisioned_numbers.sql  20260524000100_daily_burn_decisions.sql  20260524000200_daily_burn_status_constraints.sql  20260524000300_utility_payments.sql  202605260001_create_inbound_sms_messages.sql  202605260002_create_provisioned_numbers.sql  202605260003_create_number_pricing_settings.sql  202605260004_create_admin_pricing_settings.sql  20260526170000_create_pex_revenue_ledger.sql  202605280001_add_pex_burn_execution_tracking.sql  20260528120000_create_credit_policy_promos.sql  20260528123000_create_daily_realized_burns.sql  20260528124500_align_daily_burns_with_contract.sql  20260528131500_fix_daily_burn_execution_schema.sql  20260529105000_add_daily_burn_onchain_record_index.sql  20260529170000_unified_payment_verification.sql  20260529183000_create_telnyx_voice_call_ledgers.sql  20260530090000_harden_telecom_billing.sql  (+13 more)
scripts/: test-burn-admin.sh  (+2 more)
(+65 files in other folders)
